- Added a way to return to the Planner after opening the trip list from the top menu - Refactored notification logic, added TripPlanner#setNotificationVisible and TripPlanner#handleNotificationVisibilityChange to enable animations for notifications - Added a new popup to prevent trips with empty info from being created

--- a/src/main/resources/krisapps/tripplanner/styles/styles.css
+++ b/src/main/resources/krisapps/tripplanner/styles/styles.css
@@ -165,6 +165,22 @@
     -fx-background-color: #a59a69;
 }
 
+.return-to-planner-panel {
+    -fx-background-color: #86f189;
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+}
+
+.return-to-planner-panel > .button {
+    -fx-background-color: #baffbb;
+    -fx-border-color: black;
+    -fx-font-weight: bold;
+}
+
+.return-to-planner-panel > .button:hover {
+    -fx-background-color: #80ae81;
+}
+
 .readonly-panel {
     -fx-background-color: #ff7979;
     -fx-border-radius: 10px;
